--- a/scss/imports/core/_variables.scss
+++ b/scss/imports/core/_variables.scss
@@ -1,13 +1,14 @@
 /*primary colors*/
 $white-cl: #fff;
 $black-cl: #000;
-
+$blue-cl: #00afab;
+$gray-cl: #838383;
 /*global text color*/
 $text-cl: #222;
 $text-black-cl: #000;
 
 /*global bg color*/
-$main-bg-cl: #000;
+$main-bg-cl: #E5E5E5;
 $black-bg-cl: #000;
 
 // time transition
