--- a/scss/imports/pages/_home.scss
+++ b/scss/imports/pages/_home.scss
@@ -36,17 +36,6 @@
     }
   }
   .online-courses {
-    > h2 {
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      @include text(16px, SA, normal, $black-cl, uppercase);
-      margin-bottom: 50px;
-      strong {
-        font-size: 50px;
-        font-family: SA-B;
-      }
-    }
     &__wrap {
       display: flex;
       flex-wrap: wrap;
@@ -110,7 +99,10 @@
             border-left: 1px solid #cecece;
             margin-left: auto;
             padding: 0 15px;
-            @include text(16px, SA-B, normal, $blue-cl, capitalize);
+            a{
+              @include text(16px, SA-B, normal, $blue-cl, capitalize);
+            }
+            
           }
         }
       }
@@ -122,17 +114,7 @@
       margin: 45px 0;
   }
   .offline-courses {
-    > h2 {
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      @include text(16px, SA, normal, $black-cl, uppercase);
-      margin-bottom: 50px;
-      strong {
-        font-size: 50px;
-        font-family: SA-B;
-      }
-    }
+    
     &__wrap {
       display: flex;
       flex-wrap: wrap;
@@ -196,7 +178,10 @@
             border-left: 1px solid #cecece;
             margin-left: auto;
             padding: 0 15px;
-            @include text(16px, SA-B, normal, $blue-cl, capitalize);
+            a{
+              @include text(16px, SA-B, normal, $blue-cl, capitalize);
+            }
+            
           }
         }
       }
@@ -237,5 +222,120 @@
             }
           }
       }
+  }
+  .member-thinks{
+    padding: 30px 0;
+    .swiper-container{
+      .swiper-pagination{
+        bottom: 0px;
+        left: 50%;
+        transform: translateX(-50%);
+        .swiper-pagination-bullet-active-main{
+          width: 20px;
+          border-radius: 5px;
+          background-color: $blue-cl;
+        }
+      }
+      .btn-ctr{
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: white;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 100;
+        i{
+          img{
+            
+            width: 30px;
+          height: 30px;
+            object-fit: contain;
+          }
+        }
+      }
+      .--next{
+        right: 0px;
+      }
+    }
+      &__wrap{
+        padding: 30px 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+          .member-details{
+              width: 570px;
+              padding: 50px;
+            background-color: white;
+            width: 50%;
+            position: relative;
+            margin-right: -50px;
+            .member__name{
+                @include text(22px, SA-B, normal, $black-cl, capitalize);
+              }
+              >span{
+                 margin-top: 10px;
+                @include text(14px, SA, normal, $black-cl, none);
+                font-weight: 400;
+              }
+              >p{
+                margin: 20px 0;
+                @include text(22px, SA, normal, $black-cl, none);
+              }
+             .quotaion-mark{
+                position: absolute;
+                right: 50px;
+                top: 50px;
+             } 
+             .social{
+                 display: flex;
+                 justify-content: space-between;
+             }
+          }
+          .member-img{
+              width: 400px;
+              height: 500px;
+          }
+          
+      }
+  }
+  .team{
+    padding: 20px 0;
+    background-color: white;
+    overflow: hidden;
+    &__wrap{
+      position: relative;
+      padding: 20px 0;
+      .swiper-scrollbar{
+        .swiper-scrollbar-drag{
+
+          background-color: $blue-cl;
+        }
+      }
+    }
+  }
+  .ready{
+
+    background-color: $blue-cl;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 0;
+    .text{
+      margin-bottom: 90px;
+      p{
+        @include text(38px, SA, normal, $white-cl, none);
+      }
+    }
+    .main-btn{
+      background-color: white;
+        color: $blue-cl;
+    }
   }
 }
