--- a/scss/imports/core/_footer.scss
+++ b/scss/imports/core/_footer.scss
@@ -1,6 +1,7 @@
 footer {
   margin-top: 60px;
   .footer-wrap {
+    position: relative;
     .footer-top {
       display: flex;
       justify-content: space-between;
@@ -58,6 +59,36 @@ footer {
         display: inline-block;
       }
     }
+    #back-to-top{
+      cursor: pointer;
+      position: absolute;
+      @include text(12px,arial,26px,$black-cl, uppercase);
+      // writing-mode: vertical-lr;
+      right: -22px;
+      bottom: 180px; 
+      height: 100px;
+      .line{
+          background-color: $black-cl;
+          width: 1px;
+          height: 140px;
+          margin: 0 auto 30px;    
+          transition: all .3s;
+      }
+      span{
+          display: block;
+          text-transform: uppercase;
+          transform: rotate(270deg);
+      }
+      &:hover{
+          .line{
+              transform: translateY(-20px);
+          }
+      }
+      @include mobile{
+          right: -10px;
+          bottom: 0px;
+      }
+  }
   }
   @include desktop {
   }
